# jfk-tell

./: .gitignore  MRE.py  README.md  _logging.py  config.py  download.py  dvc.yaml  exceptions.py  extract.py  publish.py  publish.sh  pyproject.toml  test_extraction.py
.config/: default.json
.dvc/: config
ai/google/: __init__.py
data/archives.gov/: .gitignore
prompts/extraction/: instructions.txt  system.txt
