[project]
name = "jfk"
version = "0.1.0"
description = "\"Analyze JFK assination with AI\""
authors = [
    {name = "Farhan Ahmad",email = "farhanhubble@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12 <3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "dvc[ssh] (>=3.59.1,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "google-genai (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
