[project]
name = "jfk"
version = "0.1.0"
description = "\"Analyze JFK assination with AI\""
authors = [
    {name = "Farhan Ahmad",email = "farhanhubble@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12 <3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "dvc[ssh] (>=3.59.1,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "google-genai (>=1.7.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pypdf (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.debug.dependencies]
memray = "^1.16.0"


[tool.poetry.group.publish.dependencies]
huggingface-hub = "^0.30.2"
pyarrow = "^19.0.1"

